--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,9 @@
         android:id="@+id/bottomNavi"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:itemIconTint="@color/purple_200"
+        app:itemIconTint="@color/orange"
         app:itemRippleColor="@null"
-        app:itemTextColor="@color/purple_200"
+        app:itemTextColor="@color/purple_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
