--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,7 @@
         android:gravity="center_vertical">
 
         <TextView
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -27,10 +28,14 @@
 
         <Switch
             android:id="@+id/switch4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="125dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginEnd="20dp"
             android:layout_weight="1"
-            android:text="판매중" />
+            android:text="판매중"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView4" />
 
     </LinearLayout>
 
