--- a/app/src/main/res/layout/activity_edit_article.xml
+++ b/app/src/main/res/layout/activity_edit_article.xml
@@ -126,8 +126,8 @@
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="판매 여부"
-        android:thumbTint="#d5c9fe"
+        android:text="판매 상태"
+        android:thumbTint="@color/orange"
         app:layout_constraintBottom_toTopOf="@+id/editSubmitButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
