--- a/app/src/main/res/layout/activity_edit_article.xml
+++ b/app/src/main/res/layout/activity_edit_article.xml
@@ -126,7 +126,7 @@
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="판매 상태"
+        android:text="판매완료/판매중"
         android:thumbTint="@color/orange"
         app:layout_constraintBottom_toTopOf="@+id/editSubmitButton"
         app:layout_constraintEnd_toEndOf="parent"
