--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -16,27 +16,32 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="280dp"
         android:text="My Market"
         android:textColor="@color/teal_200"
         android:textSize="50dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="250dp" />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이메일"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@id/id_edit_text"
-        app:layout_constraintBottom_toTopOf="@id/id_edit_text"/>
+        android:text="이메일"
+        android:textColor="@color/teal_200"
+        app:layout_constraintBottom_toTopOf="@id/id_edit_text"
+        app:layout_constraintStart_toStartOf="@id/id_edit_text" />
 
     <EditText
         android:id="@+id/id_edit_text"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="80dp"
+        android:background="#FFA200"
         android:elevation="3dp"
         android:hint="example@email.com"
         android:inputType="textEmailAddress"
@@ -50,18 +55,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비밀번호"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="@id/password_edit_text"
-        app:layout_constraintBottom_toTopOf="@id/password_edit_text"/>
+        android:text="비밀번호"
+        android:textColor="@color/teal_200"
+        app:layout_constraintBottom_toTopOf="@id/password_edit_text"
+        app:layout_constraintStart_toStartOf="@id/password_edit_text" />
 
     <EditText
         android:id="@+id/password_edit_text"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:layout_marginTop="30dp"
+        android:background="#FFA200"
         android:elevation="3dp"
         android:hint="password"
         android:inputType="textPassword"
@@ -80,7 +86,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:text="비밀번호 찾기"
-        android:textColor="@color/white"
+        android:textColor="@color/teal_200"
         app:layout_constraintEnd_toEndOf="@id/password_edit_text"
         app:layout_constraintTop_toBottomOf="@id/password_edit_text" />
 
@@ -88,9 +94,10 @@
         android:id="@+id/loginButton"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="35dp"
+        android:background="#FFA200"
         android:text="로그인"
-        android:textColor="#A6A4E8"
+        android:textColor="@color/teal_200"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="계정이 없으십니까?"
-        android:textColor="@color/white"
+        android:textColor="@color/teal_200"
         app:layout_constraintEnd_toStartOf="@id/create_account"
         app:layout_constraintStart_toStartOf="@id/loginButton"
         app:layout_constraintTop_toBottomOf="@id/loginButton" />
@@ -114,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="회원가입"
-        android:textColor="#535383"
+        android:textColor="@color/teal_200"
         app:layout_constraintEnd_toEndOf="@id/loginButton"
         app:layout_constraintStart_toEndOf="@id/account_question"
         app:layout_constraintTop_toBottomOf="@id/loginButton" />
